# TryToRTSDx12

./: .gitignore  CMakeLists.txt  CppRTSDx12.sln  CppRTSDx12.vcxproj  CppRTSDx12.vcxproj.filters  README.md  WinMain.cpp
Shaders/: BasicMesh.ps.hlsl  BasicMesh.vs.hlsl  EmissiveMesh.ps.hlsl  TexturedMesh.ps.hlsl
Source/Core/: CMakeLists.txt
Source/Core/Application/: Application.cpp  Application.h  Timer.cpp  Timer.h
Source/Core/Entity/: Component.h  Entity.cpp  Entity.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Core/Scene/: Scene.cpp  Scene.h
Source/Core/Utilities/: TextureLoader.cpp  TextureLoader.h  Types.h
Source/Core/Window/: Window.h
Source/Platform/: CMakeLists.txt
Source/Platform/Windows/: Win32Window.cpp  Win32Window.h  WindowsPlatform.cpp  WindowsPlatform.h
Source/Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h
Source/Rendering/Bindable/: BindableBase.h  ConstantBuffer.h  IBindable.h  IndexBuffer.cpp  IndexBuffer.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  VertexBuffer.h
Source/Rendering/Dx12/: DX12Renderer.cpp  DX12Renderer.h
Source/Rendering/RHI/: DX12RHIContext.cpp  DX12RHIContext.h  IRHIContext.h  RHITypes.h
